--- a/src/TomsResumeCore.Web/package.json
+++ b/src/TomsResumeCore.Web/package.json
@@ -33,7 +33,8 @@
     "bootstrap": "4.3.1",
     "jquery": "^3.4.1",
     "jquery-validation": "^1.19.5",
-    "jquery.easing": "^1.4.1"
+    "jquery.easing": "^1.4.1",
+    "node-sass": "^9.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.5.5",
@@ -48,6 +49,7 @@
     "gulp-rename": "1.4.0",
     "gulp-sass": "5.1.0",
     "gulp-uglify": "3.0.2",
-    "merge-stream": "^1.0.1"
+    "merge-stream": "^1.0.1",
+    "sass": "^1.69.5"
   }
 }
